# manjaliof-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml
.github/workflows/: docker.yaml
src/: cors.rs  db.rs  main.rs  payment.rs  runner.rs  tests.rs  token.rs
src/payment/: zarinpal.rs
src/payment/zarinpal/: code.rs  request.rs  verify.rs
src/runner/: manjaliof.rs
