[package]
name = "manjaliof-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
async-trait = "0.1.61"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.24.2", features = ["process"] }
chrono = "0.4.23"
lazy_static = "1.4.0"

[dev-dependencies]
mockall = "0.11.3"
rand = "0.8.5"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]
